Add polygon geographies to Budgets' map
Co-Authored-By: Julian Herrero <microweb10@gmail.com>
Co-Authored-By: Javi Martín <javim@elretirao.net>

--- a/config/locales/en/admin.yml
+++ b/config/locales/en/admin.yml
@@ -190,6 +190,7 @@ en:
         new_button: "Add new group"
     budget_headings:
       no_headings: "There are no headings in the <strong>%{group}</strong> group."
+      no_related_geography: "No related geography"
       create:
         notice: "Heading created successfully!"
       update:
@@ -722,6 +723,7 @@ en:
       proposals_topics: Proposals topics
       budgets: Participatory budgets
       geozones: Manage geozones
+      geographies: "Manage geographies"
       hidden_comments: Hidden comments
       hidden_debates: Hidden debates
       hidden_proposals: Hidden proposals
@@ -1404,6 +1406,21 @@ en:
       delete:
         success: Geozone successfully deleted
         error: This geozone can't be deleted since there are elements attached to it
+    geographies:
+      form:
+        invalid_format: "The GeoJSON provided does not follow the correct format. It must follow the \"Polygon\" or \"MultiPolygon\" type format."
+      index:
+        title: "Geographies"
+        create: "Create geography"
+        no_related_headings: "No related headings"
+      new:
+        title: "New geography"
+      create:
+        notice: "Geography created successfully!"
+      update:
+        notice: "Geography updated successfully!"
+      delete:
+        notice: "Geography deleted successfully!"
     signature_sheets:
       author: Author
       created_at: Creation date
