Show an error notice when poll answers has errors

--- a/config/locales/custom/general.yml
+++ b/config/locales/custom/general.yml
@@ -3,3 +3,8 @@ en:
     answers:
       create:
         success_notice: "Poll saved successfully!"
+      form:
+        submit_button: "Send"
+        error:
+          one: "1 error prevented your answers from being saved. Please check the marked field to know how to correct it:"
+          other: "%{count} errors prevented this Poll from being saved. Please check the marked fields to know how to correct them:"
