--- a/config/locales/es/admin.yml
+++ b/config/locales/es/admin.yml
@@ -1109,6 +1109,16 @@ es:
         alert: "Esta acción eliminará la votación y todas sus preguntas asociadas."
         success_notice: "Votación eliminada correctamente"
         unable_notice: "No se pueden eliminar votaciones con votos"
+      votation_type:
+        title: "Tipo de votación"
+        unique: "Respuesta única"
+        unique_description: "Solo se puede responder a la pregunta con una única respuesta."
+        multiple: "Respuesta múltiple"
+        multiple_description: "Permite elegir más de una respuesta. Se puede elegir el número máximo de respuestas."
+        prioritized: "Respuesta múltiple priorizada"
+        prioritized_description: "Permite elegir más de una respuesta, que a su vez se podrán ordenar por prioridad. Se puede elegir el número máximo de respuestas."
+        uneditable: "La siguiente configuración no puede ser cambiada una vez creada la pregunta."
+      max_votes: "Número máximo de votos"
     questions:
       index:
         title: "Preguntas de votaciones"
