Increase test coverage for custom admin activity log feature
Before this change, the access logs index showed the date and
time of creation using the application timezone format while the
query uses UTC, so I changed the activity log index to show the
creation date in UTC too.

Now the user can copy the date and time of creation, or a
portion of it, and paste it into the search form.

--- a/config/locales/custom/es/admin.yml
+++ b/config/locales/custom/es/admin.yml
@@ -85,7 +85,7 @@ es:
         no_records: No hay registro de actividad
       access_logs:
         title: Registro de accesos
-        datetime: Fecha y hora
+        datetime: Fecha y hora (UTC)
         email: Email
         activity: Actividad
         result: Resultado
