Add cookies consent banner feature
This is an elementary version similar to the one that implements the
`cookies-eu` gem.

The feature is optional and disabled by default, so current
installations within countries with no cookie regulation can ignore it.
The USA does not have rules for cookie usage, for example.

--- a/config/locales/custom/es/general.yml
+++ b/config/locales/custom/es/general.yml
@@ -46,3 +46,7 @@ es:
     subject_hint: Máx. 30 caracteres
     submit: Enviar
     success: Mensaje enviado correctamente
+  cookies_consent:
+    title: "Política de cookies"
+    message: "Las cookies nos ayudan a ofrecer nuestros servicios. Al utilizar nuestros servicios, aceptas el uso de cookies."
+    accept: "Aceptar"
