--- a/config/locales/custom/en/general.yml
+++ b/config/locales/custom/en/general.yml
@@ -2,3 +2,7 @@ en:
   account:
     show:
       last_sign_in: "Last login: %{last_sign_in_at} from IP %{last_sign_in_ip}"
+  cookies_consent:
+    title: "Cookies policy"
+    message: "Cookies help us deliver our services. By using our services, you agree to our use of cookies."
+    accept: "Accept"
