--- a/config/locales/custom/en/general.yml
+++ b/config/locales/custom/en/general.yml
@@ -2,6 +2,9 @@ en:
   account:
     show:
       last_sign_in: "Last login: %{last_sign_in_at} from IP %{last_sign_in_ip}"
+  layouts:
+    footer:
+      cookies_consent_setup: Cookies setup
   cookies_consent:
     title: "Cookies policy"
     message: "Cookies help us deliver our services. By using our services, you agree to our use of cookies."
@@ -9,6 +12,7 @@ en:
     reject: "Reject"
     setup: "Setup"
     more_info_link: "More information"
+    notice: "Your cookies preferences were saved! You can change them anytime from the \"Cookies setup\" link in the page footer."
   cookies_setup:
     title: Cookies setup
     description: This website uses own and third party cookies for its proper functioning. By clicking the Accept button, you agree to the use of these technologies and the processing of your data for these purposes.
