--- a/config/locales/custom/es/general.yml
+++ b/config/locales/custom/es/general.yml
@@ -11,6 +11,7 @@ es:
     search: Buscar
   layouts:
     footer:
+      cookies_consent_setup: Configuración de cookies
       links:
         legal: Aviso Legal
         privacy: Política de Privacidad
@@ -53,6 +54,7 @@ es:
     reject: "Rechazar"
     setup: "Ajustes"
     more_info_link: "Más información"
+    notice: "Tus preferencias de cookies se han guardado. Puedes cambiarlas en cualquier momento desde el enlace \"Configuración de cookies\" en el pie de página."
   cookies_setup:
     title: Configuración de cookies
     description: Esta web utiliza cookies propias y de terceros para su correcto funcionamiento. Al hacer click en el botón Aceptar, acepta el uso de estas tecnologías y el procesamiento de tus datos para estos propósitos.
