--- a/config/locales/custom/es/general.yml
+++ b/config/locales/custom/es/general.yml
@@ -61,8 +61,11 @@ es:
     essentials:
       title: Cookies essenciales
       description: Utilizadas para finalidades muy diversas, como por ejemplo, reconocerte como usuario, elegir el idioma o personalizar la forma en la que se muestra el contenido. Sin estas las funciones básicas de navegación se verán perjudicadas, por eso deben estar siempre activas.
+      button:
+        description: Sin ellas, las funciones básicas de navegación se verán afectadas, por lo que deben estar siempre activas.
     third_party:
       title: Cookies de terceros
       description: Esta web usa cookies de terceros para recopilar información anónima tal como el número de visitantes del sitio, o las páginas más populares. Activar estas cookies nos permite mejorar nuestra web.
     accept_all: Aceptar todo
     accept_essentials: Aceptar cookies esenciales
+    save_preferences: Guardar preferencias
